Bug 125504 - Notebookbar Tabbed / Compact Tabbed UI ParaStyle-controls/FontName-controls stop applying after a print preview
Summary: Notebookbar Tabbed / Compact Tabbed UI ParaStyle-controls/FontName-controls s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0 all versions
Hardware: All All
: high normal
Assignee: Justin L
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Notebookbar-Tabbed Writer-Styles-Paragraph-Combobox Print-Preview
  Show dependency treegraph
 
Reported: 2019-05-26 15:39 UTC by Maxime
Modified: 2023-07-17 13:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxime 2019-05-26 15:39:33 UTC
Description:
Since LibreOffice 6.2, I use Notebookbar interface. It is a great addition, really user-friendly.

Yet, I have found a bug in Writer. It is about using style selection with Notebookbar and not the sidebar, after opening and closing print preview.
Only Title 1, Title 2… icons works properly, not the paragraph style input.

To fix this issue, I need to restart LibreOffice Writer (or not to use print preview). It is a little embarasing, even if F11 shortkey is an easy workaround.

As far as I have searched, noone reported it. So, I hope I am understandable.

Steps to Reproduce:
1. Open a Writer file with the Notebookbar set as active;
2. Click on “Print Preview”;
3. Close the preview;
4. Change paragraph style with the style input in Home tab.

Actual Results:
Style of the selected paragraph remains unchanged.

Expected Results:
Style of the selected paragraph should have changed, as intended.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.4.2 (x64)
Build ID: 2412653d852ce75f65fbfa83fb7e7b669a126d64
Threads CPU : 8; OS : Windows 10.0; UI Render : par défaut; VCL: win; 
Locale : fr-FR (fr_FR); Langue IHM : fr-FR
Calc: threaded
Comment 1 Dieter 2019-06-01 11:10:44 UTC
I tried with Tabbed and Tabbed Compact, but couldn't reproduce it with

Version: 6.3.0.0.alpha1+ (x64)
Build ID: e92dcfdc7bd7b237e0bee26ff226a102d9e8e766
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-05-14_00:00:57
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-07-05 10:14:52 UTC
Thank you for reporting the bug.
Could you please try to reproduce it with a master build from http://dev-builds.libreoffice.org/daily/master/ ?
You can install it alongside the standard version.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the master build
Comment 3 Maxime 2019-07-08 17:03:43 UTC
(In reply to Xisco Faulí from comment #2)
> Thank you for reporting the bug.
> Could you please try to reproduce it with a master build from
> http://dev-builds.libreoffice.org/daily/master/ ?
> You can install it alongside the standard version.
> I have set the bug's status to 'NEEDINFO'. Please change it back to
> 'UNCONFIRMED' if the bug is still present in the master build

I can reproduce this bug in the current master build. Moreover, it appears that it affects both Tabbed and Tabbed Compact UI.
I have reversed bug’s status.

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 49422a469646ad8be43ba828ca24c2484c26b9e8
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-08_02:14:23
Locale: fr-FR (fr_FR); UI-Language: en-US
Calc: CL
Comment 4 Dieter 2019-07-09 07:06:49 UTC
I confirm it with tabbed UI and

Version: 6.4.0.0.alpha0+ (x64)
Build ID: ae823e4633a76d13cebc6432b9e44b9b2862326b
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-26_23:06:07
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Additional information: changing paragraph style in sidebar works
Comment 5 Dieter 2021-06-03 09:42:59 UTC
Still present in

Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 4a9eef7849a75ba91806886ea9c96d114c8d56f9
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 6 stragu 2023-01-06 15:32:44 UTC
Also on Linux:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I am upping the importance and severity as it breaks the main purpose of a commonly used feature.
Comment 7 stragu 2023-01-12 16:14:57 UTC
Also in 6.0:

Version: 6.0.0.0.alpha1 (x64)
Build ID: c1d1f859b268f650143d48f294999cda0fa57350
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: en-GB (en_GB); Calc: group
Comment 8 Justin L 2023-06-29 13:16:26 UTC
repro 24.2+
Comment 9 Justin L 2023-07-06 00:35:31 UTC
This is .uno:StylesPreview, a com.sun.star.comp.svx.StylesPreviewToolBoxControl.

The problem is that MouseButtonDown and Up are not even registering over top of this control after the print preview, not even in vcl/source/window/winproc.cxx.
Comment 10 Justin L 2023-07-06 01:50:20 UTC
(In reply to Justin L from comment #9)
> The problem is that MouseButtonDown and Up are not even registering
Nope, I responded too fast. The same thing happens before print preview. In both cases it calls 
SfxToolBoxControl::Dispatch(m_xDispatchProvider, ".uno:StyleApply", aArgs);

Now it seems the problem is with m_xDispatchProvider. In SfxBaseController::queryDispatch it fails both of
if (!m_pData->m_bDisposing && m_pData->m_pViewShell) 

SvxFontNameBox_Base::Select has the same problem.
Comment 11 Commit Notification 2023-07-12 00:22:37 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42ee261d01983c94d8be60fccae37ae5af53bf5e

tdf#125504 StylesPreviewWindow: don't use disposed DispatchProvider

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-07-12 19:03:51 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24c04a2c13c2bf110c4b600f03236c35a5ddfd14

tdf#125504 SvxFontNameBox: don't use disposed DispatchProvider

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-07-12 19:05:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c2a77967cf16a9465f86b5aed62497141fbef535

tdf#125504 SvxStyleBox: don't use disposed DispatchProvider

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 stragu 2023-07-17 13:44:06 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46d7119b8be03968017e59d882e5671350304e15
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Justin!