tdf#125504 StylesPreviewWindow: don't use disposed DispatchProvider

.uno:StylesPreview in the notebookbar was doing nothing
because the view switching from print preview caused
the saved XDispatchProvider to become disposed.

Thanks to Maxim, my patch is completely re-written.
I think I have implemented the method he has suggested.

Change-Id: Iae01116c742bc27ed2c14d983e7347d39c9acaf6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154148
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>